--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Trabajo de sesiones y chat",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +13,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "mysql": "^2.18.1",
+    "nodemon": "^2.0.7",
     "socket.io": "^4.1.2"
   }
 }
